# xmouse-boundary-map

./: Cargo.toml  README.md  RELEASE.md  example-config.toml
packaging/debian/: postinst  postrm  prerm
packaging/systemd/user/: xmouse-boundary-map.service
src/: config.rs  geometry.rs  main.rs  mapper.rs  x11_backend.rs
